@@ -363,6 +363,9 @@ Trunk (unreleased changes)
     HDFS-1968.  Enhance TestWriteRead to support position/sequential read,
     append, truncate and verbose options.  (CW Chung via szetszwo)
 
+    HDFS-2029.  In TestWriteRead, check visible length immediately after
+    openning the file and fix code style.  (John George via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
